@@ -15,7 +15,7 @@ import com.badlogic.gdx.utils.TimeUtils;
 import com.github.tommyettinger.digital.ArrayTools;
 import com.github.tommyettinger.digital.MathTools;
 import com.github.tommyettinger.digital.TrigTools;
-import com.github.tommyettinger.ds.ObjectList;
+import com.github.tommyettinger.ds.ObjectDeque;
 import com.github.tommyettinger.random.EnhancedRandom;
 import com.github.tommyettinger.random.WhiskerRandom;
 import com.github.tommyettinger.textra.Font;
@@ -26,7 +26,18 @@ import com.github.yellowstonegames.files.Config;
 import com.github.yellowstonegames.glyph.GlyphActor;
 import com.github.yellowstonegames.glyph.GlyphGrid;
 import com.github.yellowstonegames.glyph.MoreActions;
-import com.github.yellowstonegames.grid.*;
+import com.github.yellowstonegames.grid.Coord;
+import com.github.yellowstonegames.grid.CoordObjectOrderedMap;
+import com.github.yellowstonegames.grid.Direction;
+import com.github.yellowstonegames.grid.FOV;
+import com.github.yellowstonegames.grid.IntPointHash;
+import com.github.yellowstonegames.grid.LightingManager;
+import com.github.yellowstonegames.grid.LineTools;
+import com.github.yellowstonegames.grid.Measurement;
+import com.github.yellowstonegames.grid.Noise;
+import com.github.yellowstonegames.grid.Radiance;
+import com.github.yellowstonegames.grid.Radius;
+import com.github.yellowstonegames.grid.Region;
 import com.github.yellowstonegames.path.DijkstraMap;
 import com.github.yellowstonegames.place.DungeonProcessor;
 import com.github.yellowstonegames.text.Language;
@@ -52,8 +63,8 @@ public class DungeonDemo extends ApplicationAdapter {
     private Mob player;
     private CoordObjectOrderedMap<Mob> enemies;
     private DijkstraMap playerToCursor;
-    private final ObjectList<Coord> toCursor = new ObjectList<>(100);
-    private final ObjectList<Coord> awaitedMoves = new ObjectList<>(50);
+    private final ObjectDeque<Coord> toCursor = new ObjectDeque<>(100);
+    private final ObjectDeque<Coord> awaitedMoves = new ObjectDeque<>(50);
     private Coord cursor = Coord.get(-1, -1);
     private final Vector2 pos = new Vector2();
     private Runnable post;
@@ -133,7 +144,7 @@ public class DungeonDemo extends ApplicationAdapter {
             LineTools.pruneLines(dungeon, seen, prunedDungeon);
             gg.setVisibilities(inView::contains);
             if(!awaitedMoves.isEmpty())
-                awaitedMoves.remove(0);
+                awaitedMoves.removeFirst();
             playerToCursor.clearGoals();
             playerToCursor.resetMap();
             playerToCursor.setGoal(player.actor.getLocation());
@@ -212,7 +223,7 @@ public class DungeonDemo extends ApplicationAdapter {
                     // you're finding a path to a monster or loot, and want to bump into it, but here can be
                     // confusing because you would "move into yourself" as your first move without this.
                     if (!toCursor.isEmpty()) {
-                        toCursor.remove(0);
+                        toCursor.removeFirst();
                     }
                 }
                 return false;
@@ -412,9 +423,9 @@ public class DungeonDemo extends ApplicationAdapter {
 
         if(!gg.areChildrenActing() && !awaitedMoves.isEmpty())
         {
-            Coord m = awaitedMoves.get(0);
+            Coord m = awaitedMoves.peekFirst();
             if (!toCursor.isEmpty())
-                toCursor.remove(0);
+                toCursor.removeFirst();
             move(player.actor.getLocation().toGoTo(m));
         }
         else {
